--- a/tp6/meteo-angular/src/app/meteo/meteo.component.html
+++ b/tp6/meteo-angular/src/app/meteo/meteo.component.html
@@ -1,3 +1,4 @@
+<!--app\meteo\meteo.component.html-->
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item active" aria-current="page">🏠</li>
@@ -28,6 +29,7 @@
     </div>
   </div>
 </form>
+
 <hr/>
 
 <!-- Listing des villes, boucle sur l'array : cityList -->
@@ -47,15 +49,17 @@
 
 
 <hr/>
+<!--
 <p>
   Utilisation du filtrer
   <strong>json</strong> pour afficher le contenu de la variable
   <strong>cityList</strong>
 </p>
+
 <pre>
 {{cityList | json}}
 </pre>
-
+-->
 <!-- fin : Listing des villes -->
 
 <hr>
