--- a/tp6/meteo-angular/src/app/meteo-detail/meteo-detail.component.html
+++ b/tp6/meteo-angular/src/app/meteo-detail/meteo-detail.component.html
@@ -1,3 +1,5 @@
+<!-- meteo de la ville selectionnée -->
+<!-- meteo de la ville selectionnée -->
 <div *ngIf="meteo && meteo.cod === 200">
 
   <nav aria-label="breadcrumb">
@@ -11,7 +13,7 @@
 
   <div class="card" style="width:300px; margin: 0 auto" v-if="meteo">
     <div class="card-header">
-      {{meteo.name}} @{{meteo.dt | date:'H:mm'}}
+      {{meteo.name}} | {{(meteo.dt)*1000 | date:'H:mm a':'+0100'}} (Fuseau horaire de Paris) 
     </div>
     <img class="card-img-top" src="https://maps.googleapis.com/maps/api/staticmap?markers={{meteo.coord.lat}},{{meteo.coord.lon}}&zoom=5&size=400x300&scale=2&key=AIzaSyAkmvI9DazzG9p77IShsz_Di7-5Qn7zkcg"
       alt="Card image cap">
@@ -34,10 +36,14 @@
         <i class="wi wi-windy"></i> Vent: {{meteo.wind.speed}} km/h
       </li>
       <li class="list-group-item">
-        <i class="wi wi-sunrise"></i> Levé du soleil: {{meteo.sys.sunrise}} // Date au format Timestamp à transformer au format 'H:mm'
+        <i class="wi wi-sunrise"></i> Levé du soleil: {{(meteo.sys.sunrise*1000) | date:'H:mm a':'+0100'}}  (Fuseau horaire de Paris GMT+1)  
       </li>
+
+<!---->
+
+
       <li class="list-group-item">
-        <i class="wi wi-sunset"></i>Couché du soleil: {{meteo.sys.sunset}} // Date au format Timestamp à transformer au format 'H:mm'
+        <i class="wi wi-sunset"></i>Couché du soleil: {{(meteo.sys.sunset*1000) | date:'h:mm a'}} (Fuseau horaire de Paris GMT+1)  
       </li>
     </ul>
   </div>
@@ -48,5 +54,7 @@
   {{meteo.message}} (erreur {{meteo.cod}})
 </div>
 
-
+<!-- 
 <hr> {{meteo | json}}
+
+-->
